Moved notebooks for California Housing experiments to the corresponding folder and applied markdown formatting

--- a/californiahousing/data_analysis.ipynb
+++ b/californiahousing/data_analysis.ipynb
@@ -19,20 +19,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyze the housing data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Quick peek at top 5 instances (districts):"
+    "<strong><font color=\"blue\">\n",
+    "    <p>Analyze the housing data</p>\n",
+    "    <p>Quick peek at top 5 instances (districts):</p>\n",
+    "</font></strong>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -62,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ocean Proximity counts in categories:"
+    "<strong><font color=\"blue\">Ocean Proximity counts in categories:</font><strong>"
    ]
   },
   {
@@ -91,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Description of the data set (percentiles etc):"
+    "<strong><font color=\"blue\">Description of the data set (percentiles etc):</font></strong>"
    ]
   },
   {
@@ -143,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slice a smaller DataFrame and plot:"
+    "<strong><font color=\"blue\">Slice a smaller DataFrame and plot:</font></strong>"
    ]
   },
   {
@@ -185,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slice first 3 rows:"
+    "<strong><font color=\"blue\">Slice first 3 rows:</font></strong>"
    ]
   },
   {
@@ -218,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slice first 3 rows and 5 columns:"
+    "<strong><font color=\"blue\">Slice first 3 rows and 5 columns:</font></strong>"
    ]
   },
   {
@@ -246,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query: Districts with Median Income == 10:"
+    "<strong><font color=\"blue\">Query: Districts with Median Income == 10:</font></strong>"
    ]
   },
   {
@@ -278,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the median housing value and population by latitude and longitude:"
+    "<strong><font color=\"blue\">Plot the median housing value and population by latitude and longitude:</font></strong>"
    ]
   },
   {
@@ -312,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find the correlations for median housing value based on correlation matrix:"
+    "<strong><font color=\"blue\">Find the correlations for median housing value based on correlation matrix:</font></strong>"
    ]
   },
   {
@@ -346,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best correlation for predicting the median housing value seems to be with the median income attribute so plot their relation:"
+    "<strong><font color=\"blue\">The best correlation for predicting the median housing value seems to be with the median income attribute so plot their relation:</font></strong>"
    ]
   },
   {
@@ -389,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
