Trying out some formatting change for a markdown cell in a Jupyter notebook (not rendering properly on GitHub)

--- a/californiahousing/data_analysis.ipynb
+++ b/californiahousing/data_analysis.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Ocean Proximity counts in categories:</font><strong>"
+    "<font color=\"blue\">Ocean Proximity counts in categories:</font>"
    ]
   },
   {
