Trying out bold formatting in markdown cells on Jupyter notebook for better rendering on GitHub

--- a/californiahousing/data_analysis.ipynb
+++ b/californiahousing/data_analysis.ipynb
@@ -19,10 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">\n",
-    "    <p>Analyze the housing data</p>\n",
-    "    <p>Quick peek at top 5 instances (districts):</p>\n",
-    "</font></strong>"
+    "**Quick peek at top 5 instances (districts):**"
    ]
   },
   {
@@ -60,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\">Ocean Proximity counts in categories:</font>"
+    "**Ocean Proximity counts in categories:**"
    ]
   },
   {
@@ -89,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Description of the data set (percentiles etc):</font></strong>"
+    "**Description of the data set (percentiles etc):**"
    ]
   },
   {
@@ -141,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Slice a smaller DataFrame and plot:</font></strong>"
+    "**Slice a smaller DataFrame and plot:**"
    ]
   },
   {
@@ -183,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Slice first 3 rows:</font></strong>"
+    "**Slice first 3 rows:**"
    ]
   },
   {
@@ -216,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Slice first 3 rows and 5 columns:</font></strong>"
+    "**Slice first 3 rows and 5 columns:**"
    ]
   },
   {
@@ -244,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Query: Districts with Median Income == 10:</font></strong>"
+    "**Query: Districts with Median Income == 10:**"
    ]
   },
   {
@@ -276,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Plot the median housing value and population by latitude and longitude:</font></strong>"
+    "**Plot the median housing value and population by latitude and longitude:**"
    ]
   },
   {
@@ -310,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Find the correlations for median housing value based on correlation matrix:</font></strong>"
+    "**Find the correlations for median housing value based on correlation matrix:**"
    ]
   },
   {
@@ -344,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">The best correlation for predicting the median housing value seems to be with the median income attribute so plot their relation:</font></strong>"
+    "**The best correlation for predicting the median housing value seems to be with the median income attribute so plot their relation:**"
    ]
   },
   {
