--- a/californiahousing/models.ipynb
+++ b/californiahousing/models.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Transform the train set with scaling, inputing and one hot encoding for the non-numeric feature (ocean proximity):</font></strong>"
+    "**Transform the train set with scaling, inputing and one hot encoding for the non-numeric feature (ocean proximity):**"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Next returns a 2-dimensional NumPy array (ndarray) of shape (16512,5) (16512 binary arrays of size 5 - a single 1 and rest 0 to denote a certain class):</font></strong>"
+    "**Next returns a 2-dimensional NumPy array (ndarray) of shape (16512,5) (16512 binary arrays of size 5 - a single 1 and rest 0 to denote a certain class):**"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Transform the numeric predictors using a pipeline composed of an inputer and scaler. MinMaxScaler instantiated with default values will scale each feature between 0 and 1. Scale can be controlled using the feature_range parameter (tuple):</font></strong>"
+    "**Transform the numeric predictors using a pipeline composed of an inputer and scaler. MinMaxScaler instantiated with default values will scale each feature between 0 and 1. Scale can be controlled using the feature_range parameter (tuple):**"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">X_train_tr is now a 2 dimensional nd array (16512,8) - Need to merge it with the binarized labels into (16512,13) shape. ocean proximity one hot vector is a 2 dimensional ndarray of shape (16512,5):</font></strong>"
+    "**X_train_tr is now a 2 dimensional nd array (16512,8) - Need to merge it with the binarized labels into (16512,13) shape. ocean proximity one hot vector is a 2 dimensional ndarray of shape (16512,5):**"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Linear Regression:</font></strong>"
+    "**Linear Regression:**"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Test with first 5 instances from the training set</font></strong>"
+    "**Test with first 5 instances from the training set**"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Measure the error using RMSE function:</font></strong>"
+    "**Measure the error using RMSE function:**"
    ]
   },
   {
@@ -183,14 +183,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">68437 is not great at all! (basically means a typical prediction error of $68437). The model is underfitting (too simple)</font></strong>"
+    "**68437 is not great at all! (basically means a typical prediction error of $68437). The model is underfitting (too simple)**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Decision Tree Regression:</font></strong>"
+    "**Decision Tree Regression:**"
    ]
   },
   {
@@ -226,11 +226,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">\n",
-    "<p>Decision Tree looks perfect (0 RMSE) but it's not! It just performs perfect on the training set that it learned but won't generalize well to new data as demonstrated below(overfitting).</p>\n",
-    "<br/>\n",
-    "<p>Perform K-fold cross-validation of Decision Tree model to measure the RMSE. The algorithm splits the training set in K parts and does K training + prediction iterations each time picking one random part for evaluation and training on the other K-1. The result is K scores. The main benefit of the approach is clean predictions: on each iteration the predictor gets to predict on a subset of instances that it never saw during training.</p>\n",
-    "</font></strong>"
+    "**Decision Tree looks perfect (0 RMSE) but it's not! It just performs perfect on the training set that it learned but won't generalize well to new data as demonstrated below(overfitting).**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Perform K-fold cross-validation of Decision Tree model to measure the RMSE. The algorithm splits the training set in K parts and does K training + prediction iterations each time picking one random part for evaluation and training on the other K-1. The result is K scores. The main benefit of the approach is clean predictions: on each iteration the predictor gets to predict on a subset of instances that it never saw during training.**"
    ]
   },
   {
@@ -263,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><font color=\"blue\">Train and test a Random Forest Regressor (works by training multiple Decision Trees on different subsets of the training set and averaging based on their predictions)</font></strong>"
+    "**Train and test a Random Forest Regressor (works by training multiple Decision Trees on different subsets of the training set and averaging based on their predictions)**"
    ]
   },
   {
